--- a/Source/IconImage/MainWindow.xaml
+++ b/Source/IconImage/MainWindow.xaml
@@ -1,8 +1,7 @@
 ﻿<Window x:Class="IconImage.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-		xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+		xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
 		xmlns:local="clr-namespace:IconImage"
 		x:Name="WindowRoot"
 		Title="IconImage"
@@ -61,7 +60,7 @@
 						Content="Save">
 					<i:Interaction.Triggers>
 						<i:EventTrigger EventName="Click">
-							<ei:CallMethodAction MethodName="SaveImage" TargetObject="{Binding ElementName=WindowRoot}"/>
+							<i:CallMethodAction MethodName="SaveImage" TargetObject="{Binding ElementName=WindowRoot}"/>
 						</i:EventTrigger>
 					</i:Interaction.Triggers>
 				</Button>
