--- a/Source/Wifinian/Views/MainWindow.xaml
+++ b/Source/Wifinian/Views/MainWindow.xaml
@@ -1,8 +1,7 @@
 ﻿<Window x:Class="Wifinian.Views.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-		xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+		xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
 		xmlns:models="clr-namespace:Wifinian.Models"
 		xmlns:views="clr-namespace:Wifinian.Views"
 		xmlns:behaviors="clr-namespace:Wifinian.Views.Behaviors"
@@ -70,8 +69,8 @@
 
 						<i:Interaction.Triggers>
 							<i:EventTrigger EventName="Click">
-								<ei:CallMethodAction TargetObject="{Binding Source={x:Static models:Settings.Current}}"
-													 MethodName="IncrementRescanInterval"/>
+								<i:CallMethodAction TargetObject="{Binding Source={x:Static models:Settings.Current}}"
+													MethodName="IncrementRescanInterval"/>
 							</i:EventTrigger>
 						</i:Interaction.Triggers>
 					</Button>
@@ -96,8 +95,8 @@
 
 						<i:Interaction.Triggers>
 							<i:EventTrigger EventName="Click">
-								<ei:CallMethodAction TargetObject="{Binding Source={x:Static models:Settings.Current}}"
-													 MethodName="IncrementSignalThreshold"/>
+								<i:CallMethodAction TargetObject="{Binding Source={x:Static models:Settings.Current}}"
+													MethodName="IncrementSignalThreshold"/>
 							</i:EventTrigger>
 						</i:Interaction.Triggers>
 					</Button>
@@ -291,18 +290,18 @@
 													IsEnabled="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CanDelete.Value, Mode=OneWay}">
 													<i:Interaction.Triggers>
 														<i:EventTrigger EventName="Click">
-															<ei:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationBox, Mode=OneWay}"
-																					 PropertyName="Visibility"
-																					 Value="Visible"/>
-															<ei:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationHeader, Mode=OneWay}"
-																					 PropertyName="Text"
-																					 Value="Delete: "/>
-															<ei:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationBody, Mode=OneWay}"
-																					 PropertyName="Text"
-																					 Value="{Binding Name, Mode=OneWay}"/>
-															<ei:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationButton, Mode=OneWay}"
-																					 PropertyName="Command"
-																					 Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.DeleteCommand}"/>
+															<i:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationBox, Mode=OneWay}"
+																					PropertyName="Visibility"
+																					Value="Visible"/>
+															<i:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationHeader, Mode=OneWay}"
+																					PropertyName="Text"
+																					Value="Delete: "/>
+															<i:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationBody, Mode=OneWay}"
+																					PropertyName="Text"
+																					Value="{Binding Name, Mode=OneWay}"/>
+															<i:ChangePropertyAction TargetObject="{Binding ElementName=ConfirmationButton, Mode=OneWay}"
+																					PropertyName="Command"
+																					Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.DeleteCommand}"/>
 														</i:EventTrigger>
 													</i:Interaction.Triggers>
 												</controls:IconButton>
@@ -356,9 +355,9 @@
 			<Grid Background="{StaticResource App.Background.Hidden}">
 				<i:Interaction.Triggers>
 					<i:EventTrigger EventName="MouseDown">
-						<ei:ChangePropertyAction TargetName="ConfirmationBox"
-												 PropertyName="Visibility"
-												 Value="Collapsed"/>
+						<i:ChangePropertyAction TargetName="ConfirmationBox"
+												PropertyName="Visibility"
+												Value="Collapsed"/>
 					</i:EventTrigger>
 				</i:Interaction.Triggers>
 			</Grid>
@@ -389,9 +388,9 @@
 								Content="OK">
 							<i:Interaction.Triggers>
 								<i:EventTrigger EventName="Click">
-									<ei:ChangePropertyAction TargetName="ConfirmationBox"
-															 PropertyName="Visibility"
-															 Value="Collapsed"/>
+									<i:ChangePropertyAction TargetName="ConfirmationBox"
+															PropertyName="Visibility"
+															Value="Collapsed"/>
 								</i:EventTrigger>
 							</i:Interaction.Triggers>
 						</Button>
@@ -402,9 +401,9 @@
 								Content="Cancel">
 							<i:Interaction.Triggers>
 								<i:EventTrigger EventName="Click">
-									<ei:ChangePropertyAction TargetName="ConfirmationBox"
-															 PropertyName="Visibility"
-															 Value="Collapsed"/>
+									<i:ChangePropertyAction TargetName="ConfirmationBox"
+															PropertyName="Visibility"
+															Value="Collapsed"/>
 								</i:EventTrigger>
 							</i:Interaction.Triggers>
 						</Button>
