--- a/Source/Wifinian/Views/MenuWindow.xaml
+++ b/Source/Wifinian/Views/MenuWindow.xaml
@@ -1,8 +1,7 @@
 ﻿<Window x:Class="Wifinian.Views.MenuWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-		xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+		xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
 		xmlns:models="clr-namespace:Wifinian.Models"
 		Width="200"
 		ResizeMode="NoResize" SizeToContent="WidthAndHeight"
@@ -123,7 +122,7 @@
 				 Text="Site">
 				<i:Interaction.Triggers>
 					<i:EventTrigger EventName="MouseDown">
-						<ei:LaunchUriOrFileAction Path="{Binding Source={x:Static models:LanguageService.ProjectSite}, Mode=OneTime}"/>
+						<i:LaunchUriOrFileAction Path="{Binding Source={x:Static models:LanguageService.ProjectSite}, Mode=OneTime}"/>
 					</i:EventTrigger>
 				</i:Interaction.Triggers>
 			</Run>
@@ -133,7 +132,7 @@
 				 Text="License">
 				<i:Interaction.Triggers>
 					<i:EventTrigger EventName="MouseDown">
-						<ei:LaunchUriOrFileAction Path="{Binding Source={x:Static models:LanguageService.License}, Mode=OneTime}"/>
+						<i:LaunchUriOrFileAction Path="{Binding Source={x:Static models:LanguageService.License}, Mode=OneTime}"/>
 					</i:EventTrigger>
 				</i:Interaction.Triggers>
 			</Run>
